fix : add padding bottom only when playground button is visible

--- a/packages/website/src/theme/CodeBlock/Content/styles.module.css
+++ b/packages/website/src/theme/CodeBlock/Content/styles.module.css
@@ -46,6 +46,11 @@
   padding: var(--ifm-pre-padding);
 }
 
+.codeBlockLinesWithPlaygroundButton {
+  padding: var(--ifm-pre-padding) var(--ifm-pre-padding)
+    calc(var(--ifm-pre-padding) * 2.5);
+}
+
 .codeBlockLinesWithNumbering {
   display: table;
   padding: var(--ifm-pre-padding) 0;
@@ -102,5 +107,9 @@
   .playgroundButton {
     position: static;
     margin: calc(var(--ifm-pre-padding) / 2);
+  }
+
+  .codeBlockLinesWithPlaygroundButton {
+    padding: var(--ifm-pre-padding);
   }
 }
